--- a/Two_Sources.ipynb
+++ b/Two_Sources.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### More Than One Source "
+    "### Generating trajectory and displacement due to two sources"
    ]
   },
   {
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing required libraries\n",
     "import numpy as np\n",
     "import time\n",
     "import matplotlib\n",
@@ -25,20 +26,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt=0.0001\n",
-    "u=6\n",
-    "x0=0\n",
+    "#assigning values to required problem parameters\n",
+    "dt=0.0001             # time_step\n",
+    "u=6                   # mobility\n",
+    "x0=0                  # initial source 1 position \n",
     "y0=0\n",
-    "x1=0.5\n",
+    "x1=0.5                #initial source 2 position\n",
     "y1=0\n",
-    "N=2000000\n",
-    "y=np.zeros(N)\n",
+    "N=2000000             #number of iterations \n",
+    "y=np.zeros(N)         # data lists for trajectories\n",
     "x=np.zeros(N)\n",
-    "x[0]=0.25\n",
+    "x[0]=0.25             # initial inclusion distance\n",
     "y[0]=5\n",
     "t=np.zeros(N)\n",
     "t[0]=dt\n",
-    "ls = np.sqrt((x0 - x1)**2 + (y0 - y1)**2)\n",
+    "ls = np.sqrt((x0 - x1)**2 + (y0 - y1)**2)          # length scale\n",
     "u = u/ls"
    ]
   },
@@ -62,6 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#solving equation of motion\n",
     "for i in range(1,N):\n",
     "    t[i]=i*dt\n",
     "    x[i]=x[i-1]+(dt*u/(4*t[i-1])**2)*((x[i-1]-x0)*np.exp((-(x[i-1]-x0)**2 -(y[i-1]-y0)**2)/(4*t[i-1])) + \\\n",
@@ -102,6 +105,7 @@
     }
    ],
    "source": [
+    "#plotting solution for trajectory\n",
     "plt.plot(x,y)\n",
     "plt.title('Trajectory Of Inclusion')\n",
     "plt.xlabel('x')\n",
@@ -138,6 +142,7 @@
     }
    ],
    "source": [
+    "#plotting solution for x trajectory\n",
     "plt.plot(t,x)\n",
     "plt.xlabel('t')\n",
     "plt.ylabel('x')\n",
@@ -208,8 +213,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#problem parameters\n",
     "dt=0.0001\n",
-    "u=0.3\n",
+    "u=0.3  \n",
     "x0=0\n",
     "y0=0\n",
     "x11=6\n",
@@ -259,6 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#numerical solution of governing equation of motion\n",
     "for i in range(1,N):\n",
     "    t[i]=i*dt\n",
     "    x[i]=x[i-1]+(dt*u1/(4*t[i-1])**2)*((x[i-1]-x0)*np.exp((-(x[i-1]-x0)**2 -(y[i-1]-y0)**2)/(4*t[i-1])) + \\\n",
@@ -315,6 +322,7 @@
     }
    ],
    "source": [
+    "#plotting results\n",
     "plt.plot(t,y,label=r'$\\lambda=6$')\n",
     "plt.plot(t,y1,label=r'$\\lambda=4$')\n",
     "plt.plot(t,y2,label=r'$\\lambda=2$')\n",
@@ -334,87 +342,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Multiple source pairs triggered sequentially"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dt=0.0001\n",
-    "u=6\n",
-    "x0=0\n",
-    "y0=0\n",
-    "x1=0.5\n",
-    "y1=0\n",
-    "N=3000000\n",
-    "y=np.zeros(N)\n",
-    "x=np.zeros(N)\n",
-    "x[0]=0.25\n",
-    "y[0]=1\n",
-    "t=np.zeros(N)\n",
-    "t[0]=dt\n",
-    "ls = np.sqrt((x0 - x1)**2 + (y0 - y1)**2)\n",
-    "u = u/ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(1,1000000):\n",
-    "    t[i]=i*dt\n",
-    "    x[i]=x[i-1]+(dt*u/(4*t[i-1])**2)*((x[i-1]-x0)*np.exp((-(x[i-1]-x0)**2 -(y[i-1]-y0)**2)/(4*t[i-1])) + \\\n",
-    "                                   (x[i-1]-x1)*np.exp((-(x[i-1]-x1)**2 -(y[i-1]-y1)**2)/(4*t[i-1])))\n",
-    "    \n",
-    "    y[i]=y[i-1]+(dt*u/(4*t[i-1])**2)*((y[i-1]-y0)*np.exp((-(x[i-1]-x0)**2 -(y[i-1]-y0)**2)/(4*t[i-1])) + \\\n",
-    "                                   (y[i-1]-y1)*np.exp((-(x[i-1]-x1)**2 -(y[i-1]-y1)**2)/(4*t[i-1])))\n",
-    "x0=0\n",
-    "y0=3.5\n",
-    "x1=0.25\n",
-    "y1=3.5\n",
-    "for i in range(1000001,2000000):\n",
-    "    t[i]=i*dt\n",
-    "    x[i]=x[i-1]+(dt*u/(4*t[i-1])**2)*((x[i-1]-x0)*np.exp((-(x[i-1]-x0)**2 -(y[i-1]-y0)**2)/(4*t[i-1])) + \\\n",
-    "                                   (x[i-1]-x1)*np.exp((-(x[i-1]-x1)**2 -(y[i-1]-y1)**2)/(4*t[i-1])))\n",
-    "    \n",
-    "    y[i]=y[i-1]+(dt*u/(4*t[i-1])**2)*((y[i-1]-y0)*np.exp((-(x[i-1]-x0)**2 -(y[i-1]-y0)**2)/(4*t[i-1])) + \\\n",
-    "                                   (y[i-1]-y1)*np.exp((-(x[i-1]-x1)**2 -(y[i-1]-y1)**2)/(4*t[i-1])))\n",
-    "x0=0\n",
-    "y0=5.5\n",
-    "x1=0.25\n",
-    "y1=5.5    \n",
-    "for i in range(2000001,N):\n",
-    "    t[i]=i*dt\n",
-    "    x[i]=x[i-1]+(dt*u/(4*t[i-1])**2)*((x[i-1]-x0)*np.exp((-(x[i-1]-x0)**2 -(y[i-1]-y0)**2)/(4*t[i-1])) + \\\n",
-    "                                   (x[i-1]-x1)*np.exp((-(x[i-1]-x1)**2 -(y[i-1]-y1)**2)/(4*t[i-1])))\n",
-    "    \n",
-    "    y[i]=y[i-1]+(dt*u/(4*t[i-1])**2)*((y[i-1]-y0)*np.exp((-(x[i-1]-x0)**2 -(y[i-1]-y0)**2)/(4*t[i-1])) + \\\n",
-    "                                   (y[i-1]-y1)*np.exp((-(x[i-1]-x1)**2 -(y[i-1]-y1)**2)/(4*t[i-1])))\n",
-    "    \n",
-    "#The backslash is for breaking the code to next line, such that the two lines are still executed as one line of code.    "
-   ]
   },
   {
    "cell_type": "code",
